--- a/README
+++ b/README
@@ -14,6 +14,12 @@ Installation
 
 * Download mailgun.py file or pull this repo
 
+Samples tryout:
+===================
+> ./run_sample.sh samples/creating-routes.py
+> ./run_sample.sh samples/sending-mail.py
+> ./run_sample.sh samples/using-mailboxes.py
+
 Getting started:
 ================
 
